Adjust notifications, fix writing metadata with no player

--- a/index.html
+++ b/index.html
@@ -33,13 +33,16 @@
 	<body>
 		<div id="results"></div>
 		<div id="search"></div>
-		<div id="infobar">
-			<audio preload="metdata" id="audioPlayer" src="" hidden></audio>
-			<div id="audioInfo"></div>
-			<div id="audioControls"></div>
-			<div id="audioTimer"></div>
-			<div id="downloadProgress">
-				<div id="progressBar">0%</div>
+		<div id="bottomView">
+			<div id="notification"></div>
+			<div id="infobar">
+				<audio preload="metdata" id="audioPlayer" src="" hidden></audio>
+				<div id="audioInfo"></div>
+				<div id="audioControls"></div>
+				<div id="audioTimer"></div>
+				<div id="downloadProgress">
+					<div id="progressBar">0%</div>
+				</div>
 			</div>
 		</div>
 		<div id="nav"></div>
