Standardize icons, add new explicit, lyrics, and add to queue icons

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<!-- Third-party style sheets -->
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 	</head>
 	<body>
 		<div id="results"></div>
