Finish implementing tests for new pages

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<script src="/js/libremedia/libremedia-transcript.js" type="text/javascript"></script>
 		<script src="/js/libremedia/libremedia-utils.js" type="text/javascript"></script>
 		<script src="/js/libremedia/libremedia-navigation.js" type="text/javascript"></script>
+		<script src="/js/libremedia/libremedia-newpages.js" type="text/javascript"></script>
 		<script src="/js/libremedia/libremedia.js" type="text/javascript"></script>
 
 		<!-- Third-party style sheets -->
